Correcciones en urls

--- a/mendoza.html
+++ b/mendoza.html
@@ -18,7 +18,7 @@
         <div class="navbar">
             <div class="navbar_utilities">
                 <button class="navbar_btn">
-                    <a href="index.html">
+                    <a href="http://www.mendozalovers.com/">
                         <span class="fa-solid fa-chevron-left"></span>
                         <span class="navbar_label">Retorna</span>
                     </a>
@@ -97,7 +97,7 @@
     </div>    
 
     <div class="whatsapp">
-        <a class="whatsapp_link" href="https://wa.me/5492612503952/?text=¡Hola!" target="_blank">
+        <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
             <img class="whatsapp_img" src="img/whatsapp.png" alt="">
         </a>
     </div>
