--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="navbar_brand">
                 <h1 class="navbar_logo">
-                    <a href="index.html">
+                    <a href="http://www.mendozalovers.com/">
                         <img src="img/logo.png" alt="">
                     </a>
                 </h1>
@@ -219,7 +219,7 @@
     </div>
 
     <div class="whatsapp">
-        <a class="whatsapp_link" href="https://wa.me/5492612503952/?text=¡Hola!" target="_blank">
+        <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
             <img class="whatsapp_img" src="img/whatsapp.png" alt="">
         </a>
     </div>
