Add routing to  spanish language

--- a/lang/en/index.html
+++ b/lang/en/index.html
@@ -19,17 +19,17 @@
             <div class="navbar_utilities">
                 <div class="navbar_languages">
                     <button class="navbar_btn">
-                        <a href="http://www.mendozalovers.com/">
+                        <a href="#/">
                             <img class="navbar_flag flag--active" src="img/lang-br.png" alt="">
                         </a>
                     </button>
                     <button class="navbar_btn">
-                        <a href="http://www.mendozalovers.com/lang/en">
+                        <a href="#/">
                             <img class="navbar_flag" src="img/lang-en.png" alt="">
                         </a>
                     </button>
                     <button class="navbar_btn">
-                        <a href="http://www.mendozalovers.com/lang/es">
+                        <a href="#/">
                             <img class="navbar_flag" src="img/lang-es.png" alt="">
                         </a>
                     </button>
