--- a/lang/es/mendoza.html
+++ b/lang/es/mendoza.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;700&family=Assistant:wght@400;700&display=swap" rel="stylesheet">
-    <link href="fontawesome/css/all.min.css" rel="stylesheet">  
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="../../fontawesome/css/all.min.css" rel="stylesheet">  
+    <link href="../../css/normalize.css" rel="stylesheet">
+    <link href="../../css/styles.css" rel="stylesheet">
 </head>
 <body class="mza">
 
@@ -18,7 +18,7 @@
         <div class="navbar">
             <div class="navbar_utilities">
                 <button class="navbar_btn">
-                    <a href="http://www.mendozalovers.com/">
+                    <a href="http://www.mendozalovers.com/lang/es">
                         <span class="fa-solid fa-chevron-left"></span>
                         <span class="navbar_label">Retorna</span>
                     </a>
@@ -27,7 +27,7 @@
             <div class="navbar_brand">
                 <h1 class="navbar_logo">
                     <a href="mendoza.html">
-                        <img src="img/logo.png" alt="">
+                        <img src="../../img/logo.png" alt="">
                     </a>
                 </h1>
             </div>
@@ -57,7 +57,7 @@
                 <p class="section_text fw_bold">Visitas a Grandes Vinícolas // Vinícolas Boutique // Cavalgada entre Vinhedos // Bicicleta entre vinhedos // Dia de Colheita.</p>
             </article>
             <figure class="section_img_container">
-                <img class="section_img" src="img/wine.jpg" alt="">
+                <img class="section_img" src="../../img/wine.jpg" alt="">
             </figure>
         </section>
 
@@ -67,7 +67,7 @@
                 <p class="section_text fw_bold">Trekking // Cavalgadas // Rapel // Arvorismo // Passeio de Veleiro // Expedição Aconcagua // Rafting // Voo de Helicóptero // Balão // Ski // Paraquedismo.</p>
             </article>
             <figure class="section_img_container">
-                <img class="section_img" class="adventure-img" src="img/adventure.jpg" alt="">
+                <img class="section_img" class="adventure-img" src="../../img/adventure.jpg" alt="">
             </figure>
         </section>
 
@@ -77,7 +77,7 @@
                 <p class="section_text fw_bold">Gastronomia em Vinícolas // Olivícolas // Restaurantes Gourmet // Restaurantes Luxuosos // Restaurantes Tradicionais.</p>
             </article>
             <figure class="section_img_container">
-                <img class="section_img" src="img/gastronomy.jpg" alt="">
+                <img class="section_img" src="../../img/gastronomy.jpg" alt="">
             </figure>
         </section>
 
@@ -87,7 +87,7 @@
                 <p class="section_text fw_bold">Spa days // Aguas Termais // Eventos Culturales // Circuitos de Compras // Dia da Noiva // Hospedagens Especiais: Hotéis 5 estrelas - Pousadas Boutique- Alojamentos Entre Vinhedos – Alojamento e Montanhas.</p>
             </article>
             <figure class="section_img_container">
-                <img class="section_img" src="img/experiences.jpg" alt="">
+                <img class="section_img" src="../../img/experiences.jpg" alt="">
             </figure>
         </section>
 
@@ -98,7 +98,7 @@
 
     <div class="whatsapp">
         <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
-            <img class="whatsapp_img" src="img/whatsapp.png" alt="">
+            <img class="whatsapp_img" src="../../img/whatsapp.png" alt="">
         </a>
     </div>
 
