Add alt attribute to all images in each language

--- a/lang/en/index.html
+++ b/lang/en/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;700&family=Assistant:wght@400;700&display=swap" rel="stylesheet">
-    <link href="fontawesome/css/all.min.css" rel="stylesheet">    
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="../../fontawesome/css/all.min.css" rel="stylesheet">    
+    <link href="../../css/normalize.css" rel="stylesheet">
+    <link href="../../css/styles.css" rel="stylesheet">
 </head>
 <body class="home">
 
@@ -19,26 +19,26 @@
             <div class="navbar_utilities">
                 <div class="navbar_languages">
                     <button class="navbar_btn">
-                        <a href="#/">
-                            <img class="navbar_flag flag--active" src="img/lang-br.png" alt="">
+                        <a href="http://www.mendozalovers.com/">
+                            <img class="navbar_flag" src="../../img/lang-br.png" alt="Button to switch to Portuguese language.">
                         </a>
                     </button>
                     <button class="navbar_btn">
-                        <a href="#/">
-                            <img class="navbar_flag" src="img/lang-en.png" alt="">
+                        <a href="http://www.mendozalovers.com/lang/en">
+                            <img class="navbar_flag flag--active" src="../../img/lang-en.png" alt="English language button, which is the currently selected language.">
                         </a>
                     </button>
                     <button class="navbar_btn">
-                        <a href="#/">
-                            <img class="navbar_flag" src="img/lang-es.png" alt="">
+                        <a href="http://www.mendozalovers.com/lang/es">
+                            <img class="navbar_flag" src="../../img/lang-es.png" alt="Button to switch to Spanish language.">
                         </a>
                     </button>
                 </div>
             </div>
             <div class="navbar_brand">
                 <h1 class="navbar_logo">
-                    <a href="http://www.mendozalovers.com/">
-                        <img src="img/logo.png" alt="">
+                    <a href="http://www.mendozalovers.com/lang/es">
+                        <img src="../../img/logo.png" alt="Mendoza Lovers logo.">
                     </a>
                 </h1>
             </div>
@@ -59,10 +59,10 @@
         <header class="hero bg--red-wine">
             <div class="bg_patch"></div>
             <div class="hero_video">
-                <video autoplay loop muted preload="auto" poster="img/hero.jpg">
-                    <source src="img/video.mp4"  type="video/mp4">
-                    <source src="img/video.webm" type="video/webm">
-                    <source src="img/video.ogv"  type="video/ogg">
+                <video autoplay loop muted preload="auto" poster="../../img/hero.jpg">
+                    <source src="../../img/video.mp4"  type="video/mp4">
+                    <source src="../../img/video.webm" type="video/webm">
+                    <source src="../../img/video.ogv"  type="video/ogg">
                 </video>
             </div>
             <div class="hero_slogan">
@@ -73,20 +73,20 @@
             <div class="section_wrapper">
                 <article class="section_article article--left">
                     <div class="section_lettering">
-                        <img src="img/lettering.png" alt="">
+                        <img src="../../img/lettering.png" alt="Phrase 'I am Carla Ribeiro' written in cursive.">
                     </div>
                     <h3 class="section_subtitle">&laquo;Organizadora de Eventos e Turismo&raquo;</h3>
                     <p class="section_text text--hug">Me dedico a organizar experiências únicas e especiais em Mendoza. Quer viajar por turismo, celebrar um evento especial, ou por negócios? Organizo a sua vinda a Mendoza sob medida, do princípio ao fim, com dicas de todas as atividades que existe em cada estação do ano. Sou uma <span class="fw_bold">Mendoza Lover</span> e gostaria que todos os visitantes se apaixonem por esse destino tão especial que é Mendoza.</p>
                 </article>
                 <figure class="section_img_container">
-                    <img class="section_img" src="img/about.jpg" alt="">
+                    <img class="section_img" src="../../img/about.jpg" alt="Photograph of Carla Ribeiro drinking a glass of wine with an impressive landscape in the background.">
                 </figure>
             </div>
         </section>
         <section id="tourism" class="section_h bg--camel">
             <div class="section_wrapper">
                 <figure class="section_img_container">
-                    <img class="section_img" src="img/tourism.jpg" alt="">
+                    <img class="section_img" src="../../img/tourism.jpg" alt="Photograph showing a glass of red wine in the foreground, and a landscape of vineyards and mountains in the background.">
                 </figure>
                 <article class="section_article">
                     <h3 class="section_title">QUER PASSAR AS <span class="fw_bold">FÉRIAS</span> DOS SEUS SONHOS EM <span class="fw_bold">MENDOZA?</span></h3>
@@ -110,13 +110,13 @@
                 </article>
                 <div class="section_imgs_container">
                     <figure class="section_img_container img--01">
-                        <img class="section_img" src="img/events-01.jpg" alt="">
+                        <img class="section_img" src="../../img/events-01.jpg" alt="Photograph of a man and a woman dressed as a bride and groom, embracing, looking into each other's eyes, standing in a garden in broad daylight.">
                     </figure>
                     <figure class="section_img_container img--02">
-                        <img class="section_img" src="img/events-02.jpg" alt="">
+                        <img class="section_img" src="../../img/events-02.jpg" alt="Aerial photograph of a man and a woman dressed as groom and bride, walking through vineyards, with the mountains in the background.">
                     </figure>
                     <figure class="section_img_container img--03">
-                        <img class="section_img" src="img/events-03.jpg" alt="">
+                        <img class="section_img" src="../../img/events-03.jpg" alt="Photograph of a group of friends drinking a few glasses of red wine at midday in a garden.">
                     </figure>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                     </div>
                 </article>
                 <figure class="section_img_container">
-                    <img class="section_img" src="img/business.jpg" alt="">
+                    <img class="section_img" src="../../img/business.jpg" alt="Close-up photograph showing two people in suits shaking hands.">
                 </figure>
             </div>
             <div class="section_actions actions--mobile">
@@ -159,7 +159,7 @@
         <section id="agency" class="section_v">
             <div class="section_wrapper">
                 <figure class="section_img_container">
-                    <img class="section_img" src="img/agencies.png" alt="">
+                    <img class="section_img" src="../../img/agencies.png" alt="Photograph of a wooden sign in the shape of an arrow, pointing to the right, with the word 'Mendoza', located on the trunk of a tree, and with a landscape in the background.">
                 </figure>
                 <article class="section_article article--right">
                     <h3 class="section_title">VOCÊ É UMA <span class="fw_bold">AGÊNCIA</span> DE <span class="fw_bold">TURISMO</span>?</h3>
@@ -220,11 +220,11 @@
 
     <div class="whatsapp">
         <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
-            <img class="whatsapp_img" src="img/whatsapp.png" alt="">
+            <img class="whatsapp_img" src="../../img/whatsapp.png" alt="Whatsapp icon">
         </a>
     </div>
         
-    <script src="js/scripts.js"></script>
+    <script src="../../js/scripts.js"></script>
     
 </body>
 </html>
