--- a/lang/es/index.html
+++ b/lang/es/index.html
@@ -20,17 +20,17 @@
                 <div class="navbar_languages">
                     <button class="navbar_btn">
                         <a href="http://www.mendozalovers.com/">
-                            <img class="navbar_flag" src="../../img/lang-br.png" alt="">
+                            <img class="navbar_flag" src="../../img/lang-br.png" alt="Botón para cambiar al idioma portugués.">
                         </a>
                     </button>
                     <button class="navbar_btn">
                         <a href="http://www.mendozalovers.com/lang/en">
-                            <img class="navbar_flag" src="../../img/lang-en.png" alt="">
+                            <img class="navbar_flag" src="../../img/lang-en.png" alt="Botón para cambiar al idioma inglés.">
                         </a>
                     </button>
                     <button class="navbar_btn">
                         <a href="http://www.mendozalovers.com/lang/es">
-                            <img class="navbar_flag flag--active" src="../../img/lang-es.png" alt="">
+                            <img class="navbar_flag flag--active" src="../../img/lang-es.png" alt="Botón de idioma español, que es el idioma actualmente seleccionado.">
                         </a>
                     </button>
                 </div>
@@ -38,7 +38,7 @@
             <div class="navbar_brand">
                 <h1 class="navbar_logo">
                     <a href="http://www.mendozalovers.com/lang/es">
-                        <img src="../../img/logo.png" alt="">
+                        <img src="../../img/logo.png" alt="Logo de Mendoza Lovers.">
                     </a>
                 </h1>
             </div>
@@ -73,20 +73,20 @@
             <div class="section_wrapper">
                 <article class="section_article article--left">
                     <div class="section_lettering">
-                        <img src="../../img/lettering.png" alt="">
+                        <img src="../../img/lettering.png" alt="Frase 'Soy Carla Ribeiro' escrita en cursiva.">
                     </div>
                     <h3 class="section_subtitle">&laquo;Organizadora de Eventos e Turismo&raquo;</h3>
                     <p class="section_text text--hug">Me dedico a organizar experiências únicas e especiais em Mendoza. Quer viajar por turismo, celebrar um evento especial, ou por negócios? Organizo a sua vinda a Mendoza sob medida, do princípio ao fim, com dicas de todas as atividades que existe em cada estação do ano. Sou uma <span class="fw_bold">Mendoza Lover</span> e gostaria que todos os visitantes se apaixonem por esse destino tão especial que é Mendoza.</p>
                 </article>
                 <figure class="section_img_container">
-                    <img class="section_img" src="../../img/about.jpg" alt="">
+                    <img class="section_img" src="../../img/about.jpg" alt="Fotografía de Carla Ribeiro bebiendo una copa de vino con un impresionante paisaje de fondo.">
                 </figure>
             </div>
         </section>
         <section id="tourism" class="section_h bg--camel">
             <div class="section_wrapper">
                 <figure class="section_img_container">
-                    <img class="section_img" src="../../img/tourism.jpg" alt="">
+                    <img class="section_img" src="../../img/tourism.jpg" alt="Fotografía que muestra una copa de vino tinto en primer plano, y un paisaje de viñedos y montañas en el fondo.">
                 </figure>
                 <article class="section_article">
                     <h3 class="section_title">QUER PASSAR AS <span class="fw_bold">FÉRIAS</span> DOS SEUS SONHOS EM <span class="fw_bold">MENDOZA?</span></h3>
@@ -110,13 +110,13 @@
                 </article>
                 <div class="section_imgs_container">
                     <figure class="section_img_container img--01">
-                        <img class="section_img" src="../../img/events-01.jpg" alt="">
+                        <img class="section_img" src="../../img/events-01.jpg" alt="Fotografía de un hombre y una mujer vestidos de novios, abrazados, mirándose a los ojos, de pie en un jardín a plena luz del día.">
                     </figure>
                     <figure class="section_img_container img--02">
-                        <img class="section_img" src="../../img/events-02.jpg" alt="">
+                        <img class="section_img" src="../../img/events-02.jpg" alt="Fotografía aérea de un hombre y una mujer vestidos de novio, paseando entre viñedos, con las montañas al fondo.">
                     </figure>
                     <figure class="section_img_container img--03">
-                        <img class="section_img" src="../../img/events-03.jpg" alt="">
+                        <img class="section_img" src="../../img/events-03.jpg" alt="Fotografía de un grupo de amigos bebiendo unas copas de vino tinto al mediodía en un jardín.">
                     </figure>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                     </div>
                 </article>
                 <figure class="section_img_container">
-                    <img class="section_img" src="../../img/business.jpg" alt="">
+                    <img class="section_img" src="../../img/business.jpg" alt="Fotografía en primer plano que muestra a dos personas de traje dándose la mano.">
                 </figure>
             </div>
             <div class="section_actions actions--mobile">
@@ -159,7 +159,7 @@
         <section id="agency" class="section_v">
             <div class="section_wrapper">
                 <figure class="section_img_container">
-                    <img class="section_img" src="../../img/agencies.png" alt="">
+                    <img class="section_img" src="../../img/agencies.png" alt="Fotografía de un cartel de madera en forma de flecha, apuntando hacia la derecha, con la palabra 'Mendoza', situado sobre el tronco de un árbol, y con un paisaje de fondo.">
                 </figure>
                 <article class="section_article article--right">
                     <h3 class="section_title">VOCÊ É UMA <span class="fw_bold">AGÊNCIA</span> DE <span class="fw_bold">TURISMO</span>?</h3>
@@ -220,7 +220,7 @@
 
     <div class="whatsapp">
         <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
-            <img class="whatsapp_img" src="../../img/whatsapp.png" alt="">
+            <img class="whatsapp_img" src="../../img/whatsapp.png" alt="Icono de Whatsapp">
         </a>
     </div>
         
