--- a/mendoza.html
+++ b/mendoza.html
@@ -27,7 +27,7 @@
             <div class="navbar_brand">
                 <h1 class="navbar_logo">
                     <a href="mendoza.html">
-                        <img src="img/logo.png" alt="">
+                        <img src="img/logo.png" alt="Logo de Mendoza Lovers.">
                     </a>
                 </h1>
             </div>
@@ -57,7 +57,7 @@
                 <p class="section_text fw_bold">Visitas a Grandes Vinícolas // Vinícolas Boutique // Cavalgada entre Vinhedos // Bicicleta entre vinhedos // Dia de Colheita.</p>
             </article>
             <figure class="section_img_container">
-                <img class="section_img" src="img/wine.jpg" alt="">
+                <img class="section_img" src="img/wine.jpg" alt="Colagem fotográfica que mostra três imagens representativas das vinícolas de Mendoza, com as diferentes atividades que podem ser realizadas ali.">
             </figure>
         </section>
 
@@ -67,7 +67,7 @@
                 <p class="section_text fw_bold">Trekking // Cavalgadas // Rapel // Arvorismo // Passeio de Veleiro // Expedição Aconcagua // Rafting // Voo de Helicóptero // Balão // Ski // Paraquedismo.</p>
             </article>
             <figure class="section_img_container">
-                <img class="section_img" class="adventure-img" src="img/adventure.jpg" alt="">
+                <img class="section_img" class="adventure-img" src="img/adventure.jpg" alt="Colagem fotográfica que mostra três imagens representativas de atividades de turismo de aventura que podem ser realizadas em Mendoza: como caminhadas nas montanhas, esqui e rafting.">
             </figure>
         </section>
 
@@ -77,7 +77,7 @@
                 <p class="section_text fw_bold">Gastronomia em Vinícolas // Olivícolas // Restaurantes Gourmet // Restaurantes Luxuosos // Restaurantes Tradicionais.</p>
             </article>
             <figure class="section_img_container">
-                <img class="section_img" src="img/gastronomy.jpg" alt="">
+                <img class="section_img" src="img/gastronomy.jpg" alt="Colagem fotográfica que mostra três imagens representativas da oferta gastronômica de Mendoza.">
             </figure>
         </section>
 
@@ -87,7 +87,7 @@
                 <p class="section_text fw_bold">Spa days // Aguas Termais // Eventos Culturales // Circuitos de Compras // Dia da Noiva // Hospedagens Especiais: Hotéis 5 estrelas - Pousadas Boutique- Alojamentos Entre Vinhedos – Alojamento e Montanhas.</p>
             </article>
             <figure class="section_img_container">
-                <img class="section_img" src="img/experiences.jpg" alt="">
+                <img class="section_img" src="img/experiences.jpg" alt="Colagem fotográfica que mostra três imagens representativas das experiências que Mendoza oferece.">
             </figure>
         </section>
 
@@ -98,7 +98,7 @@
 
     <div class="whatsapp">
         <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
-            <img class="whatsapp_img" src="img/whatsapp.png" alt="">
+            <img class="whatsapp_img" src="img/whatsapp.png" alt="Icone do whatsapp">
         </a>
     </div>
 
