--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
                 <div class="navbar_languages">
                     <button class="navbar_btn">
                         <a href="http://www.mendozalovers.com/">
-                            <img class="navbar_flag flag--active" src="img/lang-br.png" alt="">
+                            <img class="navbar_flag flag--active" src="img/lang-br.png" alt="Botão de idioma português, que é o idioma selecionado no momento.">
                         </a>
                     </button>
                     <button class="navbar_btn">
                         <a href="http://www.mendozalovers.com/lang/en">
-                            <img class="navbar_flag" src="img/lang-en.png" alt="">
+                            <img class="navbar_flag" src="img/lang-en.png" alt="Botão para mudar para o idioma inglês.">
                         </a>
                     </button>
                     <button class="navbar_btn">
                         <a href="http://www.mendozalovers.com/lang/es">
-                            <img class="navbar_flag" src="img/lang-es.png" alt="">
+                            <img class="navbar_flag" src="img/lang-es.png" alt="Botão para mudar para o idioma espanhol.">
                         </a>
                     </button>
                 </div>
@@ -38,7 +38,7 @@
             <div class="navbar_brand">
                 <h1 class="navbar_logo">
                     <a href="http://www.mendozalovers.com/">
-                        <img src="img/logo.png" alt="">
+                        <img src="img/logo.png" alt="Logo de Mendoza Lovers.">
                     </a>
                 </h1>
             </div>
@@ -73,20 +73,20 @@
             <div class="section_wrapper">
                 <article class="section_article article--left">
                     <div class="section_lettering">
-                        <img src="img/lettering.png" alt="">
+                        <img src="img/lettering.png" alt="Frase 'Eu sou Carla Ribeiro' em itálico.">
                     </div>
                     <h3 class="section_subtitle">&laquo;Organizadora de Eventos e Turismo&raquo;</h3>
                     <p class="section_text text--hug">Me dedico a organizar experiências únicas e especiais em Mendoza. Quer viajar por turismo, celebrar um evento especial, ou por negócios? Organizo a sua vinda a Mendoza sob medida, do princípio ao fim, com dicas de todas as atividades que existe em cada estação do ano. Sou uma <span class="fw_bold">Mendoza Lover</span> e gostaria que todos os visitantes se apaixonem por esse destino tão especial que é Mendoza.</p>
                 </article>
                 <figure class="section_img_container">
-                    <img class="section_img" src="img/about.jpg" alt="">
+                    <img class="section_img" src="img/about.jpg" alt="Fotografia de Carla Ribeiro a beber um copo de vinho com uma paisagem impressionante ao fundo.">
                 </figure>
             </div>
         </section>
         <section id="tourism" class="section_h bg--camel">
             <div class="section_wrapper">
                 <figure class="section_img_container">
-                    <img class="section_img" src="img/tourism.jpg" alt="">
+                    <img class="section_img" src="img/tourism.jpg" alt="Fotografia mostrando um copo de vinho tinto em primeiro plano e uma paisagem de vinhedos e montanhas ao fundo.">
                 </figure>
                 <article class="section_article">
                     <h3 class="section_title">QUER PASSAR AS <span class="fw_bold">FÉRIAS</span> DOS SEUS SONHOS EM <span class="fw_bold">MENDOZA?</span></h3>
@@ -110,13 +110,13 @@
                 </article>
                 <div class="section_imgs_container">
                     <figure class="section_img_container img--01">
-                        <img class="section_img" src="img/events-01.jpg" alt="">
+                        <img class="section_img" src="img/events-01.jpg" alt="Fotografia de um homem e uma mulher vestidos de noivos, abraçados, olhando nos olhos um do outro, em pé em um jardim em plena luz do dia.">
                     </figure>
                     <figure class="section_img_container img--02">
-                        <img class="section_img" src="img/events-02.jpg" alt="">
+                        <img class="section_img" src="img/events-02.jpg" alt="Fotografia aérea de um homem e uma mulher vestidos de noivos, caminhando pelos vinhedos, com montanhas ao fundo.">
                     </figure>
                     <figure class="section_img_container img--03">
-                        <img class="section_img" src="img/events-03.jpg" alt="">
+                        <img class="section_img" src="img/events-03.jpg" alt="Fotografia de um grupo de amigos bebendo algumas taças de vinho tinto, ao meio-dia, em um jardim.">
                     </figure>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                     </div>
                 </article>
                 <figure class="section_img_container">
-                    <img class="section_img" src="img/business.jpg" alt="">
+                    <img class="section_img" src="img/business.jpg" alt="Fotografia de close-up mostrando duas pessoas de terno apertando as mãos.">
                 </figure>
             </div>
             <div class="section_actions actions--mobile">
@@ -159,7 +159,7 @@
         <section id="agency" class="section_v">
             <div class="section_wrapper">
                 <figure class="section_img_container">
-                    <img class="section_img" src="img/agencies.png" alt="">
+                    <img class="section_img" src="img/agencies.png" alt="Fotografia de uma placa de madeira em forma de seta apontando para a direita com a palavra 'Mendoza', localizada no tronco de uma árvore, e com uma paisagem ao fundo.">
                 </figure>
                 <article class="section_article article--right">
                     <h3 class="section_title">VOCÊ É UMA <span class="fw_bold">AGÊNCIA</span> DE <span class="fw_bold">TURISMO</span>?</h3>
@@ -220,7 +220,7 @@
 
     <div class="whatsapp">
         <a class="whatsapp_link" href="https://wa.me/5492615704456/?text=¡Olá!" target="_blank">
-            <img class="whatsapp_img" src="img/whatsapp.png" alt="">
+            <img class="whatsapp_img" src="img/whatsapp.png" alt="Icone do Whatsapp">
         </a>
     </div>
         
