Slider ad implementation

--- a/lang/es/index.html
+++ b/lang/es/index.html
@@ -86,6 +86,11 @@
                 <!-- Slider wrapper -->
                 <div class="swiper-wrapper">
                     <!-- Slides -->
+                    <div class="swiper-slide ad_01_slide">
+                        <figure>
+                            <img class="section_img" src="../../img/slider/slider_ad_01.jpg">
+                        </figure>
+                    </div>
                     <div class="swiper-slide">
                         <figure>
                             <img class="section_img" src="../../img/slider/slider_1.jpg">
